# auto_dns

./: .gitignore  README.rst  pyproject.toml
auto_ddns/: __init__.py  main.py
auto_ddns/dns_providers/: arvan.py  base.py  cloudflare.py
auto_dns/: __main__.py  exceptions.py  main.py
auto_dns/dns_providers/: __init__.py  arvan.py  cloudflare.py
tests/: test_auto_ddns.py  test_auto_dns.py
